--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="" />
+    <link rel="icon" href="/naruto.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Make you day awesome with Dincharya"
     />
-    <link rel="apple-touch-icon" href="" />
+    <link rel="apple-touch-icon" href="/naruto.jpg" />
 
-    <title>React App</title>
+    <title>Dincharya</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
